[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/player_icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/track_minimap.gd" type="Script" id=2]
[ext_resource path="res://scenes/components/curved_line_2d.tscn" type="PackedScene" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 50

[node name="TrackMinimap" type="Node2D"]
script = ExtResource( 2 )
player_icon = ExtResource( 1 )

[node name="ScalingHelper" type="Node2D" parent="."]

[node name="TrackPath" type="Path2D" parent="ScalingHelper"]
curve = null

[node name="StartLine" type="PathFollow2D" parent="ScalingHelper/TrackPath"]
position = Vector2( -99.1171, -154.856 )
rotation = -0.742965

[node name="Sprite" type="Sprite" parent="ScalingHelper/TrackPath/StartLine"]
rotation = 1.5708
scale = Vector2( 1, 5 )
texture = SubResource( 2 )

[node name="TrackLine" parent="ScalingHelper" instance=ExtResource( 3 )]
color = Color( 0.482353, 0, 0, 1 )
width = 10.0

[node name="Players" type="Node2D" parent="ScalingHelper"]
